@@ -22,7 +22,6 @@ import Annex.Direct
 import Annex.Content
 import Annex.Content.Direct
 import Annex.CatFile
-import Annex.Version
 import Annex.Exception
 import Init
 import qualified Command.Add
@@ -107,7 +106,6 @@ perform = do
 	
 cleanup :: CommandCleanup
 cleanup = do
-	setVersion defaultVersion
 	showStart "indirect" ""
 	showEndOk
 	return True
