@@ -10,6 +10,10 @@ git-annex (5.20131222) UNRELEASED; urgency=medium
   * Added new external special remote interface.
   * addurl, importfeed: Sanitize | and some other symbols and special
     characters.
+  * Auto-upgrade v3 indirect repos to v5 with no changes.
+    This also fixes a problem when a direct mode repo was somehow set to v3
+    rather than v4, and so the automatic direct mode upgrade to v5 was not
+    done.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 24 Dec 2013 13:54:32 -0400
 
